First build for 5.2.0; handles data migration and new room templates